--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
     </div>
 
     <!-- Логотип -->
+<!--    <div class="header__element logo">-->
+<!--        <img src="assets/images/Grouplogotype.svg" alt="Логотип компании CPS" class="logo__logotype">-->
+<!--    </div>-->
     <div class="header__element logo">
-        <img src="assets/images/Grouplogotype.svg" alt="Логотип компании CPS" class="logo__logotype">
+        <a href="#">
+            <img src="assets/images/Grouplogotype.svg" alt="Логотип компании CPS" class="logo__logotype">
+        </a>
     </div>
+
     <div class="header__wrapper header__wrapper-menu wrapper">
         <!-- Первое меню -->
         <nav class="menu menu--primary">
