--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!--        <img src="assets/images/Grouplogotype.svg" alt="Логотип компании CPS" class="logo__logotype">-->
 <!--    </div>-->
     <div class="header__element logo">
-        <a href="#">
+        <a href="#" aria-label="Посетить сайт компании">
             <img src="assets/images/Grouplogotype.svg" alt="Логотип компании CPS" class="logo__logotype">
         </a>
     </div>
