--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <nav class="menu menu--primary">
             <ul class="menu__list">
                 <!-- Элементы первого меню -->
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--call"><span>Позвонить</span></a>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--call" aria-label="Позвонить компании"><span>Позвонить</span></a>
                 </li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--write"><span>Написать</span></a>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--write" aria-label="Написать компании"><span>Написать</span></a>
                 </li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--login"><span>Логин</span></a>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--login" aria-label="Зайти в свой кабинет"><span>Логин</span></a>
                 </li>
             </ul>
         </nav>
