--- a/index.html
+++ b/index.html
@@ -29,20 +29,28 @@
     <div class="header__wrapper header__wrapper-menu wrapper">
         <nav class="menu menu--primary">
             <ul class="menu__list">
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--call menu__link--hide-text" aria-label="Позвонить компании"><span>Позвонить</span></a>
+                <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                                  class="menu__link menu__link--call menu__link--hide-text"
+                                                                  aria-label="Позвонить компании"><span>Позвонить</span></a>
                 </li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--write menu__link--hide-text" aria-label="Написать компании"><span>Написать</span></a>
+                <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                                  class="menu__link menu__link--write menu__link--hide-text"
+                                                                  aria-label="Написать компании"><span>Написать</span></a>
                 </li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--login menu__link--hide-text" aria-label="Зайти в свой кабинет"><span>Логин</span></a>
+                <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                                  class="menu__link menu__link--login menu__link--hide-text"
+                                                                  aria-label="Зайти в свой кабинет"><span>Логин</span></a>
                 </li>
             </ul>
         </nav>
         <div class="menu__deliver menu__deliver--hidden deliver"></div>
         <nav class="menu menu--secondary">
             <ul class="menu__list">
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status menu__link--hide-text"><span>Статус ремонта</span></a>
+                <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                                  class="menu__link menu__link--status menu__link--hide-text"><span>Статус ремонта</span></a>
                 </li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application menu__link--hide-text"><span>Отправить заявку</span></a>
+                <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                                  class="menu__link menu__link--application menu__link--hide-text"><span>Отправить заявку</span></a>
                 </li>
             </ul>
         </nav>
@@ -53,14 +61,20 @@
         <h1 class="main__title main__title--padding main__title--position">Услуги и сервисы</h1>
         <nav class="main__menu main__menu--hidden main__menu--position menu menu--secondary">
             <ul class="menu__list">
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status"><span>Статус ремонта</span></a></li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application"><span>Отправить заявку</span></a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status"><span>Статус ремонта</span></a>
+                </li>
+                <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                                  class="menu__link menu__link--application"><span>Отправить заявку</span></a>
+                </li>
             </ul>
         </nav>
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__item navigation__item--active"><a href="#" class="navigation__link navigation__link--active">Ремонтируемые бренды</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link navigation__link-hidden">Дополнительные услуги</a></li>
+                <li class="navigation__item navigation__item--active"><a href="#"
+                                                                         class="navigation__link navigation__link--active">Ремонтируемые
+                    бренды</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link navigation__link-hidden">Дополнительные
+                    услуги</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Ремонтируемые устройства</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Цены на услуги</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Адреса сервисных центров</a></li>
@@ -75,13 +89,15 @@
             <div class="article__content">
                 <h3 hidden>О нас</h3>
                 <p class="article__text text">
-                    Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
-                     <br> <br>
+                    Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете
+                    отремонтировать свой ноутбук Dell с официальной гарантией производителя.
+                    <br> <br>
                     <span class="text__hidden-part">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</span>
                 </p>
                 <button type="button" class="article__button button_read-more">Читать далее</button>
             </div>
-            <img src="assets/images/Picture%20Copybackground-logotype.jpg" alt="Это фото логотипа компании" class="article__image">
+            <img src="assets/images/Picture%20Copybackground-logotype.jpg" alt="Это фото логотипа компании"
+                 class="article__image">
         </article>
     </section>
 </main>
