--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 <body>
 <header class="header header--padding">
     <div class="header__wrapper wrapper">
-        <button type="button" class="menu-burger-button round-icon" aria-label="Открыть меню">
-            <span hidden="hidden" class="menu-burger-button__line"></span>
-            <span hidden="hidden" class="menu-burger-button__line"></span>
-            <span hidden="hidden" class="menu-burger-button__line"></span>
-        </button>
+        <button type="button" class="menu-burger-button round-icon" aria-label="Открыть меню"><span hidden="hidden">Открыть меню</span></button>
 
         <div class="header__deliver header__deliver--hidden deliver"></div>
     </div>
